--- a/bot-batllr/package.json
+++ b/bot-batllr/package.json
@@ -9,8 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://muilipato.github.io/Phase-2-Code-Challenge-Bot-Batllr/bot-batllr/public"
+
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
