--- a/bot-batllr/package.json
+++ b/bot-batllr/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://muilipato.github.io/Phase-2-Code-Challenge-Bot-Batllr",
+
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -10,17 +12,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-    
-
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage": "https://muilipato.github.io/Phase-2-Code-Challenge-Bot-Batllr/bot-batllr"
-
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
